--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CivicWriter",
+  "name": "CiviHub",
   "version": "1.0.0",
   "description": "A simple interface for documenting civic projects",
   "main": "server/start.js",
@@ -50,8 +50,7 @@
     "mongoose": "^4.0.7",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
-    "passport-facebook": "^1.0.3",
-    "passport-google-oauth": "^0.1.5",
+    "passport-github2": "^0.1.9",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.2",
     "run-sequence": "^1.0.2",
