--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.3.5",
     "supertest": "^0.15.0"
+  },
+  "engines": {
+    "node": "0.12.7"
   }
 }
